--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # DB
-DB_HOST=postgres
+DB_HOST=postgres # If you want to run app locally (without docker), DB_HOST=localhost and just remove app container in docker-compose.yml
 DB_PORT=5432
 DB_NAME=aviation_weather
 DB_USER=postgres
