feat: so it's different port (not conflict with other in dbeaver)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # DB
-DB_HOST=postgres # If you want to run app locally (without docker), DB_HOST=localhost and just remove app container in docker-compose.yml
-DB_PORT=5432
+DB_HOST=host.docker.internal # If you want to run app locally (without docker), DB_HOST=localhost and just remove app container in docker-compose.yml
+DB_PORT=5430 # Not overlap with other port
 DB_NAME=aviation_weather
 DB_USER=postgres
 DB_PASSWORD=postgres
