--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "5432:5432" # host (localhost), access the server here:inside the container where the Postgres listens.
+      - "5430:5432" # host (localhost), access the server here:inside the container where the Postgres listens.
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -23,12 +23,12 @@ services:
       - "${APP_PORT}:8080"
     environment:
       - DB_HOST=postgres # Since its on a docker, you can connect the db to its service, if you want to run locally, use localhost:5432 to connect to db
-      - DB_PORT=5432
+      - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - WEATHER_API_KEY=${WEATHER_API_KEY}
-      - APP_PORT=8080 # Matching the expose in Dockerfile
+      - APP_PORT=${APP_PORT} # Matching the expose in Dockerfile
     depends_on:
       postgres:
         condition: service_healthy
@@ -41,7 +41,7 @@ services:
     build: .
     environment:
       - DB_HOST=postgres
-      - DB_PORT=5432
+      - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
