--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -6,4 +6,4 @@ metadata:
 type: Opaque
 data:
   DB_PASSWORD: cG9zdGdyZXM=
-  WEATHER_API_KEY: EXAMPLE_KEY
+  WEATHER_API_KEY: EXAMPLE_KEY # Change this into your key
