--- a/k8s/job.yaml
+++ b/k8s/job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: db-migrate-and-seed
+  name: aviation-weather-db-migrate-and-seed
   namespace: aviation-weather
 spec:
   template:
