--- a/sonarqube-setup/docker-compose.yml
+++ b/sonarqube-setup/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   sonarqube:
-    image: sonarqube:lts
+    image: sonarqube:10-community  # Latest LTS community edition
     container_name: sonarqube
     depends_on:
       - db
@@ -12,7 +12,6 @@ services:
       SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonarqube
       SONAR_JDBC_USERNAME: sonar
       SONAR_JDBC_PASSWORD: sonar
-      SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: "true"
     volumes:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
@@ -20,7 +19,7 @@ services:
     restart: unless-stopped
 
   db:
-    image: postgres:15
+    image: postgres:15 # Compatible with sonarqube:10-community
     container_name: sonarqube-db
     environment:
       POSTGRES_USER: sonar
